# swagger.json
@@ -1,15 +1,14 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "RexCube",
-    "description": "An API for RexCube App",
+    "title": "My API",
+    "description": "Description",
     "version": "1.0.0"
   },
-  "host": "rexcube.onrender.com",
+  "host": "https://rexcube.onrender.com",
   "basePath": "/",
   "schemes": [
-    "https",
-    "http"
+    "https"
   ],
   "paths": {
     "/activity/": {
@@ -17,9 +16,16 @@
         "tags": [
           "Activity"
         ],
-        "description": "Get all the activities",
+        "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/activity/{activityId}": {
@@ -27,7 +33,10 @@
         "tags": [
           "Activity"
         ],
-        "description": "Get a specific activity by its id",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "activityId",
@@ -36,44 +45,9 @@
             "type": "string"
           }
         ],
-        "responses": {}
-      }
-    },
-    "/activity/new": {
-      "post": {
-        "tags": [
-          "Activity"
-        ],
-        "description": "Create a new activity (admin only)",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "location": {
-                  "example": "any"
-                },
-                "title": {
-                  "example": "any"
-                },
-                "info": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": [1,7,4]
-                },
-                "website": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -81,12 +55,63 @@
         }
       }
     },
+    "/activity/new": {
+      "post": {
+        "tags": [
+          "Activity"
+        ],
+        "description": "This route creates the activity, this will only be accessed by admins and even then the admin will not input the information, but rather pass the request activity file.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Some description about the activity",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "location": {
+                  "type": "string",
+                  "example": "North"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Name of Activity"
+                },
+                "info": {
+                  "type": "string",
+                  "example": "Time, cost, etc., about the activity."
+                },
+                "category": {
+                  "type": "array",
+                  "example": [
+                    1,
+                    5,
+                    7
+                  ],
+                  "items": {
+                    "type": "number"
+                  }
+                },
+                "website": {
+                  "type": "string",
+                  "example": "https://somewebsite.com"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/activity/{categoryId}": {
       "get": {
         "tags": [
           "Activity"
         ],
-        "description": "Get activity by category",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "categoryId",
@@ -95,7 +120,14 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/activity/{id}": {
@@ -103,7 +135,7 @@
         "tags": [
           "Activity"
         ],
-        "description": "Delete activity by id",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -124,24 +156,24 @@
     },
     "/requests/": {
       "get": {
-        "tags": [
-          "Activity Requests"
-        ],
-        "description": "Get all the requests",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/requests/{userId}": {
       "get": {
-        "tags": [
-          "Activity Requests"
+        "description": "",
+        "produces": [
+          "application/json"
         ],
-        "description": "Get requests made by specific user",
         "parameters": [
           {
             "name": "userId",
@@ -153,16 +185,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/requests/new": {
       "post": {
-        "tags": [
-          "Activity Requests"
-        ],
-        "description": "Creates a new request",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -204,43 +236,13 @@
     },
     "/requests/{requestId}": {
       "put": {
-        "tags": [
-          "Activity Requests"
-        ],
-        "description": "Update requests by requests id",
+        "description": "",
         "parameters": [
           {
             "name": "requestId",
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userId": {
-                  "example": "any"
-                },
-                "location": {
-                  "example": "any"
-                },
-                "title": {
-                  "example": "any"
-                },
-                "info": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": "any"
-                },
-                "webLink": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -253,10 +255,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Activity Requests"
-        ],
-        "description": "Delete request by request id",
+        "description": "",
         "parameters": [
           {
             "name": "requestId",
@@ -277,10 +276,7 @@
     },
     "/category/": {
       "post": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Create new category",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -291,10 +287,7 @@
     },
     "/category/{categoryId}": {
       "put": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Update category",
+        "description": "",
         "parameters": [
           {
             "name": "categoryId",
@@ -302,7 +295,6 @@
             "required": true,
             "type": "string"
           }
-          
         ],
         "responses": {
           "204": {
@@ -316,10 +308,7 @@
     },
     "/user/": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Get all users",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -328,10 +317,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Users"
-        ],
-        "description": "New user",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -342,10 +328,7 @@
     },
     "/user/id": {
       "delete": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Delete user",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -359,37 +342,13 @@
     },
     "/user/{userId}": {
       "put": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Update user",
+        "description": "",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "username":{
-                  "example":"any"
-                },
-                "favorites": {
-                  "example": [3,1,9]
-                },
-                "isAdmin":{
-                  "example":false
-                }
-              }
-            }
           }
         ],
         "responses": {
